# ORION

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  ablation_logs.md  docker-compose.yml  mkdocs.yml
docker/: Dockerfile.base  Dockerfile.pi
flight_segment/orion/Orion/Components/VlmInferenceEngine/: CMakeLists.txt  VlmInferenceEngine.cpp  VlmInferenceEngine.fpp  VlmInferenceEngine.hpp
flight_segment/orion/Orion/Utils/: CMakeLists.txt  SimSatClient.cpp  SimSatClient.hpp
ground_segment/: ablation_logs.md  convert_test_images.py  evaluate_logs.md  pyproject.toml  raw_to_jpg.py  receiver.py  validation_logs.md
ground_segment/data/: data.py  data_gen.py  upload_to_server.sh  visualise_downlink.py
ground_segment/data/downlinked_UHF_run_1/fprime-downlink/: orion_medium_00000.raw  orion_medium_00001.raw  orion_medium_00002.raw  orion_medium_00003.raw  orion_medium_00004.raw  orion_medium_00005.raw  orion_medium_00006.raw  orion_medium_00007.raw  orion_medium_00008.raw  orion_medium_00009.raw  orion_medium_00010.raw  orion_medium_00011.raw  orion_medium_00012.raw  orion_medium_00013.raw  orion_medium_00014.raw  orion_medium_00015.raw  orion_medium_00016.raw  orion_medium_00017.raw  orion_medium_00018.raw  orion_medium_00019.raw  orion_medium_00020.raw  orion_medium_00021.raw  orion_medium_00022.raw
ground_segment/data/downlinked_UHF_run_2/fprime-downlink/: orion_medium_00000.raw  orion_medium_00001.raw  orion_medium_00002.raw  orion_medium_00003.raw  orion_medium_00004.raw  orion_medium_00005.raw  orion_medium_00006.raw  orion_medium_00007.raw  orion_medium_00008.raw  orion_medium_00009.raw  orion_medium_00010.raw  orion_medium_00011.raw  orion_medium_00012.raw  orion_medium_00013.raw  orion_medium_00014.raw
ground_segment/data/downlinked_UHF_run_3/fprime-downlink/: orion_medium_00000.raw  orion_medium_00001.raw  orion_medium_00002.raw  orion_medium_00003.raw  orion_medium_00004.raw  orion_medium_00005.raw  orion_medium_00006.raw  orion_medium_00007.raw  orion_medium_00008.raw  orion_medium_00009.raw
ground_segment/data/downlinked_XBand_run_1/: orion_frame_0000.raw  orion_frame_0001.raw
ground_segment/data/downlinked_XBand_run_2/: orion_frame_0000.raw  orion_frame_0001.raw
ground_segment/data/downlinked_XBand_run_3/: orion_frame_0000.raw  orion_frame_0001.raw  orion_frame_0002.raw  orion_frame_0003.raw
ground_segment/data/orion_dataset/: README.md  test_dataset.jsonl  train_dataset.jsonl  val_dataset.jsonl
ground_segment/experiments/: ablation.py
ground_segment/training/: download_weights.sh  evaluate.py  fine_tune.py  fuse.py  poc.py  validation.py
ground_segment/training/orion_lora_weights/: README.md  adapter_config.json  processor_config.json  tokenizer_config.json
ground_segment/training/orion_lora_weights/checkpoint-30/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
ground_segment/training/orion_lora_weights/checkpoint-60/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
ground_segment/training/orion_lora_weights/checkpoint-90/: rng_state.pth  trainer_state.json
(+94 files in other folders)
